[tool.poetry]
name = "instrument-api"
version = "0.1.0"
description = "Refactored for Restack deployment"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "instrument_apis/src" }]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
